test/correct/ImportTwo1.hs
module ImportTwo1(x) where

x = 10